--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "csv-parser": "^3.0.0",
     "fast-csv": "^4.3.6",
-    "selenium-webdriver": "^4.0.0-beta.3"
+    "selenium-webdriver": "^3.6.0"
   }
 }
